# otus-cpp-07.homework

./: .gitignore  CMakeLists.txt  CustomQueue.cpp  CustomQueue.h  Doxyfile  QueueCommandType.h  QueueCommands.cpp  QueueCommands.h  main.cpp  test_bulk.cpp
.github/workflows/: release.yml
Block/: Block.cpp  Block.h  BlockType.h  CommandsBlock.cpp  CommandsBlock.h  DynamicBlock.cpp  DynamicBlock.h  StaticBlock.cpp  StaticBlock.h
Block2/: Block2.cpp  Block2.h  CommandBlock2.cpp  CommandBlock2.h  DynamicBlock2.cpp  DynamicBlock2.h
Block3/: AddCommandType.h  Block3.cpp  Block3.h
Bulk/: Bulk.cpp  Bulk.h  Bulk_moc.cpp  Bulk_moc.h
Command/: ArrayCommands.cpp  ArrayCommands.h  Command.cpp  Command.h  IComand.h  QueueCommandType.h  QueueCommands.cpp  QueueCommands.h
Logger/: FileLogger.cpp  FileLogger.h  IConsoleLogger.h  IFileLogger.h  ILogger.h  LogSystem.cpp  LogSystem.h  LogSystem3.cpp  LogSystem3.h  StdCoutLogger.cpp  StdCoutLogger.h  StdCoutLogger_moc.cpp  StdCoutLogger_moc.h
docs/html/: 4_81_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  4_81_81_2CompilerIdC_2CMakeCCompilerId_8c.html  4_81_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  4_81_82_2CompilerIdC_2CMakeCCompilerId_8c.html  AddCommandType_8h.html  AddCommandType_8h__dep__incl.map  AddCommandType_8h__dep__incl.md5  AddCommandType_8h_source.html  ArrayCommands_8cpp_8o_8d.html  Block3_8cpp_8o_8d.html  Block_8cpp_8o_8d.html  Bulk_8cpp.html  Bulk_8cpp__incl.map  Bulk_8cpp__incl.md5  Bulk_8h.html  Bulk_8h__dep__incl.map  Bulk_8h__dep__incl.md5  Bulk_8h__incl.map  Bulk_8h__incl.md5  Bulk_8h_source.html  Bulk__moc_8cpp.html  Bulk__moc_8cpp__incl.map  Bulk__moc_8cpp__incl.md5  Bulk__moc_8h.html  Bulk__moc_8h__dep__incl.map  Bulk__moc_8h__dep__incl.md5  Bulk__moc_8h__incl.map  Bulk__moc_8h__incl.md5  Bulk__moc_8h_source.html  Command_8cpp_8o_8d.html  CommandsBlock_8cpp_8o_8d.html  CustomQueue_8cpp_8o_8d.html  DynamicBlock_8cpp_8o_8d.html  FileLogger_8cpp.html  FileLogger_8cpp__incl.map  FileLogger_8cpp__incl.md5  FileLogger_8h.html  FileLogger_8h__dep__incl.map  FileLogger_8h__dep__incl.md5  FileLogger_8h__incl.map  (+188 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_1.js  defines_2.js  (+29 more)
